【优化】测试代码